Revision history for perl distribution Mojo-IOLoop-ReadWriteFork

0.38 Not Released
 - Require Mojolicious 8.0
 - Add run_p()

0.37 2018-09-26T13:51:13+0900
 - Fix minion test requires Minion::Backend::SQLite >=4.001

0.36 2018-03-11T14:50:05+0100
 - Fix releasing the pty on close #10
   Contributor: Ole Bjørn Hessen

0.35 2017-08-21T13:07:01+0200
 - Need to skip close-filehandles.t for now

0.24 2017-08-19T22:46:02+0200
 - Fix running RWF with Minion 7.05 #9
 - Add test for leaking filehandles in Mojolicious application #7

0.23 2016-10-13T10:07:18+0200
 - Fix documentation: There is no "spawn" event #8

0.22 2016-06-27T08:28:49+0200
 - Add "fork" event

0.21 2016-05-03T14:27:40+0200
 - Fix failing t/synopsis.t #6

0.20 2016-04-18T14:51:14+0200
 - Add support for passing in %ENV #5

0.19 2016-04-14T11:54:18+0200
 - Add missing documentation for CODE passed on to run() / start()
 - Change conduit() into holding a hash.

0.18 2016-04-14T09:54:31+0200
 - Improved documentation
 - Add conduit() attribute
 - Remove deprecated reactor() attribute

0.17 2016-03-10T22:41:54+0100
 - Improve tests on FreeBSD
   http://cpantesters.org/cpan/report/9d911494-a39d-11e5-932c-a1bf8fb2e322

0.16 2015-11-19T19:36:39+0100
 - Fix Minion::Backend::File does not exist anymore #2

0.15 2015-10-15T16:50:48+0200
 - Made t/minion.t more robust

0.14 2015-10-15T16:21:07+0200
 - Will use waitpid() if $SIG{CHLD} = "DEFAULT"
   https://github.com/kraih/minion/issues/15

0.13 2015-07-16T12:42:41+0200
 - Will use EV::child to look for SIGCHLD if EV is available

0.12 2015-04-28T15:14:02+0200
 - Fix reading from stdout_read after "Input/output error" ($!=5)
 - Improved output to screen in DEBUG mode
 - Will not require Test::Memory::Cycle
   It could not be installed, since it require CGI.pm which is not core anymore

0.11 2015-01-03T15:32:16Z
 - Skip sudo.t

0.10 2015-01-03T12:59:57Z
 - Fix die() inside callback in child process
 - Fix starting invalid program
 - Add "ioloop" attribute