@@ -3,6 +3,8 @@ Revision history for perl distribution Mojo-IOLoop-ReadWriteFork
 0.38 Not Released
  - Require Mojolicious 8.0
  - Add run_p()
+ - Add fix for premature close in special pty cases #12
+   Contributor: Ole Bjørn Hessen
 
 0.37 2018-09-26T13:51:13+0900
  - Fix minion test requires Minion::Backend::SQLite >=4.001
